--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -40,4 +40,13 @@
   .contact-info-container p {
     margin-bottom: 5px;
   }
+  .box1{
+    margin-top: 15vh;
+    background: black;
+      color: white;
+  }
+  .main {
+    background: black;
+}
+
   
