--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,10 +1,7 @@
-
 .add1 {
-    background: rgb(135, 0, 170);
-    background: linear-gradient(90deg, rgba(135, 0, 170, 1) 0%, rgba(103, 28, 174, 1) 50%, rgba(67, 52, 174, 1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     color: white;
-    border-radius: 10px;
-    width: 400px;
 }
 
 .BC {
@@ -14,7 +11,24 @@
     border-radius: 10px;
     font-size: 20px;
 }
-.add{
+
+.add {
     margin-top: 5em;
     margin: 20px;
+}
+
+.main {
+    background: black;
+}
+
+.cdH {
+    color: rgb(32, 31, 31);
+}
+
+.btnAD {
+    background-color: #0be4ec;
+    border: black solid 1px;
+    border-radius: 10px;
+    padding: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
